# load-shedding-predictor

./: README.md  skills.md
.claude/: settings.local.json
load_shedding_predictor/: .gitignore  pyproject.toml
load_shedding_predictor/backend/: __init__.py  config.py  features.py  main.py
load_shedding_predictor/data/processed/: processed_data.csv
load_shedding_predictor/data/raw/: load_shedding_data.csv
load_shedding_predictor/frontend/: package.json
load_shedding_predictor/frontend/components/: PredictionForm.js
load_shedding_predictor/frontend/pages/: index.js
load_shedding_predictor/frontend/pages/api/: predict.js
load_shedding_predictor/src/: classifier.py  features.py  scraper.py  train.py
