[project]
name = "load-shedding-predictor"
version = "0.1.0"
description = "LESCO Load Shedding Predictor for Lahore zones"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "uvicorn>=0.46.0",
    "webdriver-manager>=4.0.2",
    "xgboost>=2.1.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pytest>=9.0.3",
]
